--- a/Semester 2/Data Engineering 1/W1/Test.ipynb
+++ b/Semester 2/Data Engineering 1/W1/Test.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-02-22T13:49:17.409552Z",
+     "start_time": "2024-02-22T13:49:17.404286Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as num\n",
     "\n",
     "x = 500\n",
-    "\n"
+    "print(x)"
    ]
   }
  ],
