--- a/Semester 2/Data Engineering 1/W2/DatEng_P02.ipynb
+++ b/Semester 2/Data Engineering 1/W2/DatEng_P02.ipynb
@@ -2,33 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-02-29T06:56:22.218429Z",
-     "start_time": "2024-02-29T06:56:22.214455Z"
-    }
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello my name is jonas.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import regex as re\n",
-    "import pandas as pd\n",
-    "\n",
-    "x = \"Hello my name is Jonas.\"\n",
-    "\n",
-    "y = re.sub(\"Jon\", \"jon\", x)\n",
-    "print(y)\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
