--- a/Semester 2/Data Engineering 1/Grundlagen/DE1_Lab04/DE1_Lab04_Solution.ipynb
+++ b/Semester 2/Data Engineering 1/Grundlagen/DE1_Lab04/DE1_Lab04_Solution.ipynb
@@ -1904,151 +1904,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-14T15:36:50.536249Z",
+     "start_time": "2024-03-14T15:36:50.204386Z"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>customer</th>\n",
-       "      <th>article</th>\n",
-       "      <th>date</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>619</td>\n",
-       "      <td>Chips</td>\n",
-       "      <td>2021-03-13 00:14:40</td>\n",
-       "      <td>1.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>16</td>\n",
-       "      <td>668</td>\n",
-       "      <td>Fries</td>\n",
-       "      <td>2021-03-14 17:09:02</td>\n",
-       "      <td>4.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>20</td>\n",
-       "      <td>819</td>\n",
-       "      <td>Pizza</td>\n",
-       "      <td>2021-03-25 12:39:13</td>\n",
-       "      <td>4.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>22</td>\n",
-       "      <td>287</td>\n",
-       "      <td>Burger</td>\n",
-       "      <td>2021-03-26 03:35:15</td>\n",
-       "      <td>1.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>37</td>\n",
-       "      <td>701</td>\n",
-       "      <td>Coke</td>\n",
-       "      <td>2021-03-30 11:01:04</td>\n",
-       "      <td>2.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9960</th>\n",
-       "      <td>9961</td>\n",
-       "      <td>563</td>\n",
-       "      <td>Popcorn</td>\n",
-       "      <td>2021-03-20 09:00:26</td>\n",
-       "      <td>2.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9974</th>\n",
-       "      <td>9975</td>\n",
-       "      <td>140</td>\n",
-       "      <td>Beer</td>\n",
-       "      <td>2021-03-01 14:52:34</td>\n",
-       "      <td>5.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9975</th>\n",
-       "      <td>9976</td>\n",
-       "      <td>414</td>\n",
-       "      <td>Chips</td>\n",
-       "      <td>2021-03-28 23:16:32</td>\n",
-       "      <td>4.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9989</th>\n",
-       "      <td>9990</td>\n",
-       "      <td>806</td>\n",
-       "      <td>Burger</td>\n",
-       "      <td>2021-03-07 17:30:35</td>\n",
-       "      <td>4.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9994</th>\n",
-       "      <td>9995</td>\n",
-       "      <td>864</td>\n",
-       "      <td>Fries</td>\n",
-       "      <td>2021-03-19 22:27:50</td>\n",
-       "      <td>3.31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>831 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id  customer  article                 date  price\n",
-       "7        8       619    Chips  2021-03-13 00:14:40   1.58\n",
-       "15      16       668    Fries  2021-03-14 17:09:02   4.71\n",
-       "19      20       819    Pizza  2021-03-25 12:39:13   4.14\n",
-       "21      22       287   Burger  2021-03-26 03:35:15   1.97\n",
-       "36      37       701     Coke  2021-03-30 11:01:04   2.34\n",
-       "...    ...       ...      ...                  ...    ...\n",
-       "9960  9961       563  Popcorn  2021-03-20 09:00:26   2.95\n",
-       "9974  9975       140     Beer  2021-03-01 14:52:34   5.33\n",
-       "9975  9976       414    Chips  2021-03-28 23:16:32   4.20\n",
-       "9989  9990       806   Burger  2021-03-07 17:30:35   4.18\n",
-       "9994  9995       864    Fries  2021-03-19 22:27:50   3.31\n",
-       "\n",
-       "[831 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'transactions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m transactions[transactions[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdate\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mstr\u001B[38;5;241m.\u001B[39mslice(\u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m7\u001B[39m) \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m03\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'transactions' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2057,18 +1930,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-14T15:36:57.610776Z",
+     "start_time": "2024-03-14T15:36:57.596289Z"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2407.74"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'transactions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m transactions[transactions[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdate\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mstr\u001B[38;5;241m.\u001B[39mslice(\u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m7\u001B[39m) \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m03\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mprice\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39msum()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'transactions' is not defined"
+     ]
     }
    ],
    "source": [
