--- a/Semester 2/Data Engineering 1/W10/GradedLab02.ipynb
+++ b/Semester 2/Data Engineering 1/W10/GradedLab02.ipynb
@@ -134,20 +134,20 @@
     "\n",
     "(1)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "return count($restaurants?name)\n",
     "\n",
     "\n",
     "(2)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "let $filteredRestaurants := $restaurants[contains(lower-case(?name), \"bronx\")]\n",
     "return subsequence($filteredRestaurants, 1, 5)?name\n",
     "\n",
     "\n",
     "(3)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "for $restaurant in $restaurants\n",
     "where some $grade in $restaurant?grades?* satisfies $grade?score > 80 and $grade?score < 100\n",
     "return ($restaurant?name, max($restaurant?grades?*?score))\n",
@@ -155,14 +155,14 @@
     "\n",
     "(4)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "let $filteredRestaurants := $restaurants[starts-with(?name, \"Wil\")]\n",
     "return $filteredRestaurants?name\n",
     "\n",
     "\n",
     "(5)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "let $blacklistedBoroughs := (\"Staten Island\", \"Queens\", \"Bronx\", \"Brooklyn\")\n",
     "let $filteredRestaurants := $restaurants[not(?borough = $blacklistedBoroughs)]\n",
     "return string-join(\n",
@@ -174,7 +174,7 @@
     "\n",
     "(6)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "let $grouped := \n",
     "  for $restaurant in $restaurants\n",
     "  group by $borough := $restaurant?borough\n",
@@ -184,7 +184,7 @@
     "\n",
     "(7)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "let $filteredRestaurantsMexican := $restaurants[contains(lower-case(?name), \"mexican\")]\n",
     "let $filteredRestaurants := $filteredRestaurantsMexican[not(lower-case(?cuisine) = \"mexican\")]\n",
     "for $restaurant in $filteredRestaurants\n",
@@ -193,7 +193,7 @@
     "\n",
     "(8)\n",
     "\n",
-    "let $restaurants := json-doc(\"C:\\Program Files (x86)\\BaseX\\DatEng1/restaurants_basex.json\")?*\n",
+    "let $restaurants := json-doc(\"restaurants_basex.json\")?*\n",
     "let $filteredRestaurantsSugar := $restaurants[contains(lower-case(?name), \"sugar\")]\n",
     "let $filteredRestaurants := $filteredRestaurantsSugar[contains(lower-case(?cuisine), \"bakery\")]\n",
     "for $restaurant in $filteredRestaurants\n",
