--- a/Semester 2/Data Engineering 1/W10/GradedLab02.ipynb
+++ b/Semester 2/Data Engineering 1/W10/GradedLab02.ipynb
@@ -188,7 +188,8 @@
     "let $filteredRestaurantsMexican := $restaurants[contains(lower-case(?name), \"mexican\")]\n",
     "let $filteredRestaurants := $filteredRestaurantsMexican[not(lower-case(?cuisine) = \"mexican\")]\n",
     "for $restaurant in $filteredRestaurants\n",
-    "return concat($restaurant?name, \", \", $restaurant?cuisine)\n",
+    "return sort(concat($restaurant?name, \", \", $restaurant?cuisine, \", \", $restaurant?address?street))\n",
+    "\n",
     "\n",
     "\n",
     "(8)\n",
