--- a/Semester 3/DPS/0_Basics/zhaw_dps-main/DPS23_05_EMSR.ipynb
+++ b/Semester 3/DPS/0_Basics/zhaw_dps-main/DPS23_05_EMSR.ipynb
@@ -12,35 +12,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "483cde22",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T17:03:30.986723Z",
+     "start_time": "2024-10-17T17:03:30.524872Z"
+    }
+   },
    "source": [
     "from scipy.stats import norm\n",
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "id": "49f0f823",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T17:03:32.096083Z",
+     "start_time": "2024-10-17T17:03:32.091730Z"
+    }
+   },
    "source": [
     "# EMSR a with 3 classes\n",
     "r = [300, 100, 50]  # prices\n",
     "mu = [35, 25, 500]  # means\n",
     "sigma = [2, 2, 2]  # sds\n",
     "C = 160  # capacity"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
    "id": "ef7f7b57",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T17:03:33.571379Z",
+     "start_time": "2024-10-17T17:03:33.562448Z"
+    }
+   },
    "source": [
     "# Values for G2\n",
     "G_3_1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[2]/r[0]),0)\n",
@@ -52,13 +65,27 @@
     "B2 = C-G1\n",
     "B1 = C\n",
     "G3 = C\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "d42fd4cd",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T17:03:35.355062Z",
+     "start_time": "2024-10-17T17:03:35.350808Z"
+    }
+   },
+   "source": [
+    "print(\"G1: {}\".format(G1))\n",
+    "print(\"G2: {}\".format(G2))\n",
+    "print(\"G3: {}\".format(G3))\n",
+    "print(\"B1: {}\".format(B1))\n",
+    "print(\"B2: {}\".format(B2))\n",
+    "print(\"B3: {}\".format(B3))\n"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -73,14 +100,7 @@
      ]
     }
    ],
-   "source": [
-    "print(\"G1: {}\".format(G1))\n",
-    "print(\"G2: {}\".format(G2))\n",
-    "print(\"G3: {}\".format(G3))\n",
-    "print(\"B1: {}\".format(B1))\n",
-    "print(\"B2: {}\".format(B2))\n",
-    "print(\"B3: {}\".format(B3))\n"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
