--- a/Semester 3/DPS/W5/DPS23_05_EMSR_bratsjon.ipynb
+++ b/Semester 3/DPS/W5/DPS23_05_EMSR_bratsjon.ipynb
@@ -15,8 +15,8 @@
    "id": "483cde22",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T19:12:13.579292Z",
-     "start_time": "2024-10-15T19:12:13.576292Z"
+     "end_time": "2024-10-17T16:29:11.285135Z",
+     "start_time": "2024-10-17T16:29:08.668641Z"
     }
    },
    "source": [
@@ -24,81 +24,121 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# EMSR sample inputs\n",
+    "r1 = [300, 200, 100, 50, 25]  # prices\n",
+    "mu1 = [10, 15, 25, 50, 500]  # means\n",
+    "sigma1 = [2, 2, 3, 3, 5]  # sds\n",
+    "C1 = 160  # capacity\n",
+    "\n",
+    "r2 = [500, 400, 200, 100, 50, 25]  # ordered prices per class  \n",
+    "mu2 = [4, 8, 15, 25, 50, 500]  # ordered class demand means \n",
+    "sigma2 = [2, 2, 4, 10, 20, 50]  # ordered class standard deviations\n",
+    "C2 = 200  # capacity"
+   ],
+   "id": "7b08a182619033f5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T19:52:22.169247Z",
-     "start_time": "2024-10-15T19:52:22.165350Z"
+     "end_time": "2024-10-17T16:57:21.358818Z",
+     "start_time": "2024-10-17T16:57:21.350673Z"
     }
    },
    "cell_type": "code",
+   "source": [
+    "def generate_indexes_k_l(array):\n",
+    "    length = len(array)\n",
+    "    # Initialize an empty array to hold all sub-arrays\n",
+    "    nested_array = []\n",
+    "\n",
+    "    # Iterate from 1 to the specified length\n",
+    "    for n in range(1, length):\n",
+    "        sub_array = []\n",
+    "        # Create sub-array with elements [n, i] where i ranges from 0 to n-1\n",
+    "        for i in range(n):\n",
+    "            sub_array.append([n, i])\n",
+    "        # Append each sub-array to the main array\n",
+    "        nested_array.append(sub_array)\n",
+    "\n",
+    "    return nested_array\n",
+    "\n",
+    "def calculate_emrs_a(r, mu, sigma, C):\n",
+    "    indexes = generate_indexes_k_l(r)\n",
+    "    protection_limits = []\n",
+    "    G_k = 0\n",
+    "    group_size = 1\n",
+    "    count = 0\n",
+    "\n",
+    "    # Calculate protection limits\n",
+    "    for sub_array in indexes:\n",
+    "        for element in sub_array:\n",
+    "            k = element[0]\n",
+    "            l = element[1]\n",
+    "            if l == 0:\n",
+    "                G_k_l = np.round(norm(mu[0], sigma[0]).ppf(1 - r[k] / r[0]), 0)\n",
+    "            else:\n",
+    "                G_k_l = np.round(norm(mu[l], sigma[l]).ppf(1 - r[k] / r[l]), 0)\n",
+    "\n",
+    "            # Add the current value to the running sum\n",
+    "            G_k += G_k_l\n",
+    "            count += 1\n",
+    "\n",
+    "            # Check if we've reached the group size\n",
+    "            if count == group_size:\n",
+    "                protection_limits.append(G_k)\n",
+    "                G_k = 0\n",
+    "                group_size += 1\n",
+    "                count = 0\n",
+    "\n",
+    "    # Add the constant C to the final group\n",
+    "    G_k += C\n",
+    "    protection_limits.append(G_k)\n",
+    "    \n",
+    "    # Calculate booking limits\n",
+    "    booking_limits = [C]\n",
+    "    for i in range(len(protection_limits)-1):\n",
+    "        booking_limits.append(C - protection_limits[i]) \n",
+    "\n",
+    "\n",
+    "    return protection_limits, booking_limits\n",
+    "\n",
+    "# Example usage\n",
+    "indexes = generate_indexes_k_l(r)\n",
+    "print(indexes)"
+   ],
+   "id": "c117199a0ee9bae8",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range(0, 5)\n"
+      "[[[1, 0]], [[2, 0], [2, 1]], [[3, 0], [3, 1], [3, 2]], [[4, 0], [4, 1], [4, 2], [4, 3]]]\n"
      ]
     }
    ],
-   "execution_count": 64,
-   "source": [
-    "# EMSR a with 3 classes\n",
-    "r = [300, 200, 100, 50, 25]  # prices\n",
-    "mu = [10, 15, 25, 50, 500]  # means\n",
-    "sigma = [2, 2, 3, 3, 5]  # sds\n",
-    "C = 160  # capacity"
-   ],
-   "id": "c117199a0ee9bae8"
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T19:52:54.350787Z",
-     "start_time": "2024-10-15T19:52:54.336032Z"
+     "end_time": "2024-10-17T17:03:20.707621Z",
+     "start_time": "2024-10-17T17:03:20.699703Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def calculate_emrs_a(prices, means, sds, capacity):\n",
-    "    n = len(prices)\n",
-    "    G = []\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        G_i = 0\n",
-    "        for j in range(i + 1):\n",
-    "            if j == 0:\n",
-    "                ppf_value = 1 - (prices[i] / prices[0])\n",
-    "                if ppf_value < 0:\n",
-    "                    G_j = 0\n",
-    "                else:\n",
-    "                    G_j = np.round(norm(means[j], sds[j]).ppf(ppf_value), 0)\n",
-    "            else:\n",
-    "                ppf_value = 1 - (prices[i] / prices[j - 1])\n",
-    "                if ppf_value < 0:\n",
-    "                    G_j = 0\n",
-    "                else:\n",
-    "                    G_j = np.round(norm(means[j], sds[j]).ppf(ppf_value), 0)\n",
-    "\n",
-    "            G_i += G_j\n",
-    "\n",
-    "        G.append(G_i)\n",
-    "\n",
-    "    G.append(capacity)\n",
-    "\n",
-    "    return G\n",
-    "\n",
-    "# Beispiel für die Verwendung der Funktion\n",
-    "prices = [300, 200, 100, 50, 25]  # Preise\n",
-    "means = [10, 15, 25, 50, 500]  # Mittelwerte\n",
-    "sds = [2, 2, 3, 3, 5]  # Standardabweichungen\n",
-    "capacity = 160  # Kapazität\n",
-    "\n",
-    "results = calculate_emrs_a(prices, means, sds, capacity)\n",
-    "for index, value in enumerate(results):\n",
-    "    print(f\"G_{index + 1}: {value}\")\n"
+    "# Task 5\n",
+    "protection_limits, booking_limits = calculate_emrs_a(r1, mu1, sigma1, C1)\n",
+    "print(f\"Protection Limits: {protection_limits}\")\n",
+    "print(f\"Booking Limits: {booking_limits}\")"
    ],
    "id": "49f0f823",
    "outputs": [
@@ -106,173 +146,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G_1: -inf\n",
-      "G_2: 23.0\n",
-      "G_3: 52.0\n",
-      "G_4: 106.0\n",
-      "G_5: 611.0\n",
-      "G_6: 160\n"
+      "Protection Limits: [36.0, 62.0, 160]\n",
+      "Booking Limits: [160, 124.0, 98.0]\n"
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 45
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "ef7f7b57",
+   "source": [
+    "def generate_indexes_k(array):\n",
+    "    n = len(array)  # Get the length of the input array\n",
+    "    result = []  # Initialize an empty list to hold the result\n",
+    "    for i in range(n):\n",
+    "        # Create a list from 0 to i\n",
+    "        current_list = list(range(i + 1))\n",
+    "        result.append(current_list)  # Append the current list to the result\n",
+    "    return result  # Return the final result as an array\n",
+    "\n",
+    "def calculate_emrs_b(r, mu, sigma, C):\n",
+    "    # Generate indexes using the provided price array (r)\n",
+    "    indexes = generate_indexes_k(r)\n",
+    "\n",
+    "    G = []  # Initialize list for protection limits\n",
+    "    B = [C]  # Initialize B with capacity C\n",
+    "\n",
+    "    for index in indexes[:-1]:        \n",
+    "        mu_i = sum(mu[j] for j in index)  # Cumulative demand mean\n",
+    "        sigma_i = np.sqrt(sum(sigma[j]**2 for j in index))  # Cumulative standard deviation\n",
+    "\n",
+    "        # Calculate r_i\n",
+    "        Zähler = sum(r[j] * mu[j] for j in index)\n",
+    "        Nenner = sum(mu[j] for j in index)\n",
+    "        r_i = Zähler / Nenner\n",
+    "\n",
+    "        # Calculate G_i using the percent point function (PPF)\n",
+    "        probability_i = 1 - (r[index[-1]+1] / r_i)\n",
+    "        G_i = np.round(norm(mu_i, sigma_i).ppf(probability_i), 0)\n",
+    "        G.append(G_i)\n",
+    "    G.append(C)  # Add the capacity to the protection limits\n",
+    "\n",
+    "    # Calculate booking limits\n",
+    "    for i in range(len(G)-1):\n",
+    "        B.append(C - G[i])\n",
+    "\n",
+    "    return G, B\n",
+    "\n",
+    "    \n",
+    "# Example usage\n",
+    "output = generate_indexes_k(r2)\n",
+    "print(output)"
+   ],
+   "id": "8c68dbd90cb2b4c2",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T19:47:30.271792Z",
-     "start_time": "2024-10-15T19:47:30.256905Z"
+     "end_time": "2024-10-17T18:21:32.063910Z",
+     "start_time": "2024-10-17T18:21:32.054867Z"
     }
    },
+   "cell_type": "code",
    "source": [
-    "G_2_1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[1]/r[0]),0)\n",
-    "G_1 = G_2_1\n",
-    "print(G_1)\n",
-    "\n",
-    "G_3_1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[2]/r[0]),0)\n",
-    "G_3_2 = np.round(norm(mu[1], sigma[1]).ppf(1-r[2]/r[1]),0)\n",
-    "G2 = G_3_1 + G_3_2\n",
-    "print(G2)\n",
-    "\n",
-    "G_4_1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[3]/r[0]),0)\n",
-    "G_4_2 = np.round(norm(mu[1], sigma[1]).ppf(1-r[3]/r[1]),0)\n",
-    "G_4_3 = np.round(norm(mu[2], sigma[2]).ppf(1-r[3]/r[2]),0)\n",
-    "G3 = G_4_1 + G_4_2 + G_4_3\n",
-    "print(G3)\n",
-    "\n",
-    "G_5_1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[4]/r[0]),0)\n",
-    "G_5_2 = np.round(norm(mu[1], sigma[1]).ppf(1-r[4]/r[1]),0)\n",
-    "G_5_3 = np.round(norm(mu[2], sigma[2]).ppf(1-r[4]/r[2]),0)\n",
-    "G_5_4 = np.round(norm(mu[3], sigma[3]).ppf(1-r[4]/r[3]),0)\n",
-    "G4 = G_5_1 + G_5_2 + G_5_3 + G_5_4\n",
-    "print(G4)\n",
-    "\n",
-    "G_5 = C\n",
-    "print(G_5)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Values for G2\n",
-    "G_3_1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[2]/r[0]),0)\n",
-    "G_3_2 = np.round(norm(mu[1], sigma[1]).ppf(1-r[2]/r[1]),0)\n",
-    "G2 = G_3_1 + G_3_2\n",
-    "B3 = C - G2\n",
-    "\n",
-    "G1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[1]/r[0]),0)  #ppf=percent point function (inverse of cumulative distribution function)\n",
-    "B2 = C-G1\n",
-    "B1 = C\n",
-    "G3 = C\n"
+    "# Task 6\n",
+    "protection_limits, booking_limits = calculate_emrs_b(r2, mu2, sigma2, C2)\n",
+    "print(f\"Protection Limits: {protection_limits}\")\n",
+    "print(f\"Booking Limits: {booking_limits}\")"
    ],
+   "id": "a43e0b0edf7ea21b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.0\n",
-      "26.0\n",
-      "53.0\n",
-      "107.0\n",
-      "160\n"
+      "Protection Limits: [2.0, 12.0, 29.0, 60.0, 122.0, 200]\n",
+      "Booking Limits: [200, 198.0, 188.0, 171.0, 140.0, 78.0]\n",
+      "Protection Limits: [36.0, 62.0, 160]\n",
+      "Booking Limits: [160, 124.0, 98.0]\n"
      ]
     }
    ],
-   "execution_count": 54
-  },
-  {
-   "cell_type": "code",
-   "id": "d42fd4cd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T18:56:19.850921Z",
-     "start_time": "2024-10-15T18:56:19.846337Z"
-    }
-   },
-   "source": [
-    "print(\"G1: {}\".format(G1))\n",
-    "print(\"G2: {}\".format(G2))\n",
-    "print(\"G3: {}\".format(G3))\n",
-    "print(\"B1: {}\".format(B1))\n",
-    "print(\"B2: {}\".format(B2))\n",
-    "print(\"B3: {}\".format(B3))\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G1: 36.0\n",
-      "G2: 62.0\n",
-      "G3: 160\n",
-      "B1: 160\n",
-      "B2: 124.0\n",
-      "B3: 98.0\n"
-     ]
-    }
-   ],
-   "execution_count": 4
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "fc7b77d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EMSR b with 3 classes\n",
-    "r = [300, 100, 50]  # prices\n",
-    "mu = [35, 25, 500]  # mean values\n",
-    "sigma = [2, 2, 2]  # SDs\n",
-    "C = 160  # capacity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3a707935",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# G2\n",
-    "mu_2_est = mu[0] + mu[1] # estimated mu\n",
-    "sigma_2_est = np.sqrt(sigma[0]**2 + sigma[1]**2)  # estimated sigma\n",
-    "r_2_est = (mu[0]*r[0] + mu[1]*r[1])/(mu[0]+mu[1]) # weighted mean   \n",
-    "G2 = np.round(norm(mu_2_est, sigma_2_est).ppf(1-r[2]/r_2_est),0)\n",
-    "B3 = C-G2\n",
-    "G1 = np.round(norm(mu[0], sigma[0]).ppf(1-r[1]/r[0]),0)  #ppf=percent point function (inverse of cumulative distribution function)\n",
-    "B2 = C-G1\n",
-    "B1= C\n",
-    "G3 = C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "1e1ebcdf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G1: 36.0\n",
-      "G2: 62.0\n",
-      "G3: 160\n",
-      "B1: 160\n",
-      "B2: 124.0\n",
-      "B3: 98.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"G1: {}\".format(G1))\n",
-    "print(\"G2: {}\".format(G2))\n",
-    "print(\"G3: {}\".format(G3))\n",
-    "print(\"B1: {}\".format(B1))\n",
-    "print(\"B2: {}\".format(B2))\n",
-    "print(\"B3: {}\".format(B3))"
-   ]
+   "execution_count": 170
   }
  ],
  "metadata": {
