--- a/Semester 3/DPS/W5/DPS23_05_EMSR_bratsjon.ipynb
+++ b/Semester 3/DPS/W5/DPS23_05_EMSR_bratsjon.ipynb
@@ -15,8 +15,8 @@
    "id": "483cde22",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T16:29:11.285135Z",
-     "start_time": "2024-10-17T16:29:08.668641Z"
+     "end_time": "2024-10-22T08:02:35.869288Z",
+     "start_time": "2024-10-22T08:02:32.106982Z"
     }
    },
    "source": [
@@ -24,10 +24,15 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T08:02:35.888149Z",
+     "start_time": "2024-10-22T08:02:35.883341Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# EMSR sample inputs\n",
@@ -43,13 +48,13 @@
    ],
    "id": "7b08a182619033f5",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T16:57:21.358818Z",
-     "start_time": "2024-10-17T16:57:21.350673Z"
+     "end_time": "2024-10-22T08:02:41.428909Z",
+     "start_time": "2024-10-22T08:02:41.419946Z"
     }
    },
    "cell_type": "code",
@@ -111,7 +116,7 @@
     "    return protection_limits, booking_limits\n",
     "\n",
     "# Example usage\n",
-    "indexes = generate_indexes_k_l(r)\n",
+    "indexes = generate_indexes_k_l(r2)\n",
     "print(indexes)"
    ],
    "id": "c117199a0ee9bae8",
@@ -120,17 +125,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1, 0]], [[2, 0], [2, 1]], [[3, 0], [3, 1], [3, 2]], [[4, 0], [4, 1], [4, 2], [4, 3]]]\n"
+      "[[[1, 0]], [[2, 0], [2, 1]], [[3, 0], [3, 1], [3, 2]], [[4, 0], [4, 1], [4, 2], [4, 3]], [[5, 0], [5, 1], [5, 2], [5, 3], [5, 4]]]\n"
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T17:03:20.707621Z",
-     "start_time": "2024-10-17T17:03:20.699703Z"
+     "end_time": "2024-10-22T08:06:04.061192Z",
+     "start_time": "2024-10-22T08:06:04.044864Z"
     }
    },
    "cell_type": "code",
@@ -146,15 +151,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Protection Limits: [36.0, 62.0, 160]\n",
-      "Booking Limits: [160, 124.0, 98.0]\n"
+      "Protection Limits: [9.0, 26.0, 53.0, 107.0, 160]\n",
+      "Booking Limits: [160, 151.0, 134.0, 107.0, 53.0]\n"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T08:39:48.357721Z",
+     "start_time": "2024-10-22T08:39:48.346979Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def generate_indexes_k(array):\n",
@@ -200,14 +210,22 @@
     "print(output)"
    ],
    "id": "8c68dbd90cb2b4c2",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0], [0, 1], [0, 1, 2], [0, 1, 2, 3], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4, 5]]\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T18:21:32.063910Z",
-     "start_time": "2024-10-17T18:21:32.054867Z"
+     "end_time": "2024-10-22T08:42:20.097891Z",
+     "start_time": "2024-10-22T08:42:20.086751Z"
     }
    },
    "cell_type": "code",
@@ -224,13 +242,11 @@
      "output_type": "stream",
      "text": [
       "Protection Limits: [2.0, 12.0, 29.0, 60.0, 122.0, 200]\n",
-      "Booking Limits: [200, 198.0, 188.0, 171.0, 140.0, 78.0]\n",
-      "Protection Limits: [36.0, 62.0, 160]\n",
-      "Booking Limits: [160, 124.0, 98.0]\n"
+      "Booking Limits: [200, 198.0, 188.0, 171.0, 140.0, 78.0]\n"
      ]
     }
    ],
-   "execution_count": 170
+   "execution_count": 6
   }
  ],
  "metadata": {
