--- a/Semester 3/DS Grundlagen/SEP DSG.ipynb
+++ b/Semester 3/DS Grundlagen/SEP DSG.ipynb
@@ -250,9 +250,146 @@
     "manhattan_distance = cityblock(set_1, set_2)\n",
     "print(f\"Manhattan Distance: {manhattan_distance}\")"
    ],
-   "id": "2397ec6b15d07c37",
+   "id": "67df8d8abb57e826",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-18T10:43:52.168071Z",
+     "start_time": "2025-01-18T10:43:52.155808Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Cosine Similarity Matrix\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import pandas as pd\n",
+    "\n",
+    "ratings = pd.read_csv(\"ratings_lang.csv\", delimiter=\";\")\n",
+    "user_item_matrix = ratings.pivot(index=\"User\", columns=\"Item\", values=\"Rating\").fillna(0)\n",
+    "cosine_sim_matrix = cosine_similarity(user_item_matrix)\n",
+    "cosine_sim_df = pd.DataFrame(\n",
+    "        cosine_sim_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
+    "cosine_sim_df\n"
+   ],
+   "id": "2397ec6b15d07c37",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User         A         B         C         D         E         F\n",
+       "User                                                            \n",
+       "A     1.000000  0.864393  0.958958  0.981336  0.939450  0.762712\n",
+       "B     0.864393  1.000000  0.878275  0.870388  0.810093  0.901975\n",
+       "C     0.958958  0.878275  1.000000  0.989749  0.877319  0.667101\n",
+       "D     0.981336  0.870388  0.989749  1.000000  0.926696  0.706562\n",
+       "E     0.939450  0.810093  0.877319  0.926696  1.000000  0.765478\n",
+       "F     0.762712  0.901975  0.667101  0.706562  0.765478  1.000000"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>User</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "      <th>F</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>User</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.864393</td>\n",
+       "      <td>0.958958</td>\n",
+       "      <td>0.981336</td>\n",
+       "      <td>0.939450</td>\n",
+       "      <td>0.762712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.864393</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.878275</td>\n",
+       "      <td>0.870388</td>\n",
+       "      <td>0.810093</td>\n",
+       "      <td>0.901975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>0.958958</td>\n",
+       "      <td>0.878275</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.989749</td>\n",
+       "      <td>0.877319</td>\n",
+       "      <td>0.667101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>0.981336</td>\n",
+       "      <td>0.870388</td>\n",
+       "      <td>0.989749</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.926696</td>\n",
+       "      <td>0.706562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>0.939450</td>\n",
+       "      <td>0.810093</td>\n",
+       "      <td>0.877319</td>\n",
+       "      <td>0.926696</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.765478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>0.762712</td>\n",
+       "      <td>0.901975</td>\n",
+       "      <td>0.667101</td>\n",
+       "      <td>0.706562</td>\n",
+       "      <td>0.765478</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
   },
   {
    "metadata": {
