--- a/Semester 3/DS Grundlagen/SEP DSG.ipynb
+++ b/Semester 3/DS Grundlagen/SEP DSG.ipynb
@@ -257,146 +257,99 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-18T10:43:52.168071Z",
-     "start_time": "2025-01-18T10:43:52.155808Z"
+     "end_time": "2025-01-20T09:43:13.558670Z",
+     "start_time": "2025-01-20T09:43:13.550098Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Cosine Similarity Matrix\n",
+    "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import pandas as pd\n",
     "\n",
-    "ratings = pd.read_csv(\"ratings_lang.csv\", delimiter=\";\")\n",
-    "user_item_matrix = ratings.pivot(index=\"User\", columns=\"Item\", values=\"Rating\").fillna(0)\n",
-    "cosine_sim_matrix = cosine_similarity(user_item_matrix)\n",
-    "cosine_sim_df = pd.DataFrame(\n",
-    "        cosine_sim_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
-    "cosine_sim_df\n"
+    "# Load the CSV file with the first column as the index (row labels like 'A', 'B', etc.)\n",
+    "ratings = pd.read_csv(\"similarity.csv\", delimiter=\",\", index_col=0)\n",
+    "\n",
+    "# Ensure only numeric data is used for the calculation\n",
+    "numeric_data = ratings.select_dtypes(include=[float, int])\n",
+    "\n",
+    "# Compute cosine similarity\n",
+    "cosine_sim_matrix = cosine_similarity(numeric_data)\n",
+    "\n",
+    "# Create a DataFrame with similarity values\n",
+    "cosine_sim_df = pd.DataFrame(cosine_sim_matrix, index=ratings.index, columns=ratings.index)\n",
+    "\n",
+    "# Print the Cosine Similarity Matrix\n",
+    "print(cosine_sim_df)"
+   ],
+   "id": "899517a4360b70de",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          A         B         C         D         E         F         X\n",
+      "A  1.000000  0.650791  0.976187  0.997054  0.998868  0.795432  0.998868\n",
+      "B  0.650791  1.000000  0.800000  0.707107  0.613941  0.977802  0.613941\n",
+      "C  0.976187  0.800000  1.000000  0.989949  0.964764  0.907959  0.964764\n",
+      "D  0.997054  0.707107  0.989949  1.000000  0.992278  0.839570  0.992278\n",
+      "E  0.998868  0.613941  0.964764  0.992278  1.000000  0.765705  1.000000\n",
+      "F  0.795432  0.977802  0.907959  0.839570  0.765705  1.000000  0.765705\n",
+      "X  0.998868  0.613941  0.964764  0.992278  1.000000  0.765705  1.000000\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-20T08:51:18.992006Z",
+     "start_time": "2025-01-20T08:51:18.984014Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Manhattan Distance Matrix\n",
+    "\n",
+    "from scipy.spatial.distance import cityblock\n",
+    "import pandas as pd\n",
+    "\n",
+    "ratings = pd.read_csv(\"similarity.csv\", delimiter=\",\", index_col=0)\n",
+    "numeric_data = ratings.select_dtypes(include=[float, int])\n",
+    "\n",
+    "manhattan_distance_matrix = pd.DataFrame(index=ratings.index, columns=ratings.index)\n",
+    "for i in ratings.index:\n",
+    "    for j in ratings.index:\n",
+    "        manhattan_distance_matrix.loc[i, j] = cityblock(numeric_data.loc[i], numeric_data.loc[j])\n",
+    "\n",
+    "print(manhattan_distance_matrix)"
    ],
    "id": "2397ec6b15d07c37",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "User         A         B         C         D         E         F\n",
-       "User                                                            \n",
-       "A     1.000000  0.864393  0.958958  0.981336  0.939450  0.762712\n",
-       "B     0.864393  1.000000  0.878275  0.870388  0.810093  0.901975\n",
-       "C     0.958958  0.878275  1.000000  0.989749  0.877319  0.667101\n",
-       "D     0.981336  0.870388  0.989749  1.000000  0.926696  0.706562\n",
-       "E     0.939450  0.810093  0.877319  0.926696  1.000000  0.765478\n",
-       "F     0.762712  0.901975  0.667101  0.706562  0.765478  1.000000"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>User</th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "      <th>E</th>\n",
-       "      <th>F</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>User</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.864393</td>\n",
-       "      <td>0.958958</td>\n",
-       "      <td>0.981336</td>\n",
-       "      <td>0.939450</td>\n",
-       "      <td>0.762712</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B</th>\n",
-       "      <td>0.864393</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.878275</td>\n",
-       "      <td>0.870388</td>\n",
-       "      <td>0.810093</td>\n",
-       "      <td>0.901975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C</th>\n",
-       "      <td>0.958958</td>\n",
-       "      <td>0.878275</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.989749</td>\n",
-       "      <td>0.877319</td>\n",
-       "      <td>0.667101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>D</th>\n",
-       "      <td>0.981336</td>\n",
-       "      <td>0.870388</td>\n",
-       "      <td>0.989749</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.926696</td>\n",
-       "      <td>0.706562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>E</th>\n",
-       "      <td>0.939450</td>\n",
-       "      <td>0.810093</td>\n",
-       "      <td>0.877319</td>\n",
-       "      <td>0.926696</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.765478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>F</th>\n",
-       "      <td>0.762712</td>\n",
-       "      <td>0.901975</td>\n",
-       "      <td>0.667101</td>\n",
-       "      <td>0.706562</td>\n",
-       "      <td>0.765478</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D   E   F\n",
+      "A   0  11   4   3   5  10\n",
+      "B  11   0   7   8  10   9\n",
+      "C   4   7   0   1   7  12\n",
+      "D   3   8   1   0   6  11\n",
+      "E   5  10   7   6   0  11\n",
+      "F  10   9  12  11  11   0\n"
+     ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 20
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-17T12:47:31.274848Z",
-     "start_time": "2025-01-17T12:47:31.260217Z"
+     "end_time": "2025-01-20T08:29:16.000812Z",
+     "start_time": "2025-01-20T08:29:15.926509Z"
     }
    },
    "cell_type": "code",
@@ -574,12 +527,12 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 12
   }
  ],
  "metadata": {
