--- a/Semester 3/DS Grundlagen/SEP DSG.ipynb
+++ b/Semester 3/DS Grundlagen/SEP DSG.ipynb
@@ -12,6 +12,8 @@
    "source": [
     "# Binary to Integer and Integer to Binary\n",
     "from bitstring import BitArray\n",
+    "from charset_normalizer.constant import UTF8_MAXIMAL_ALLOCATION\n",
+    "from nbconvert import export\n",
     "\n",
     "# Binary to Integer\n",
     "binary_string = \"00001101\"\n",
@@ -71,7 +73,12 @@
    "execution_count": 40
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-21T07:31:02.793138Z",
+     "start_time": "2025-01-21T07:31:02.732830Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Levenshtein Distance\n",
@@ -83,14 +90,22 @@
     "print(distance)"
    ],
    "id": "50d502f94c2a8afa",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T12:33:37.901104Z",
-     "start_time": "2025-01-17T12:33:37.890091Z"
+     "end_time": "2025-01-21T07:32:44.097868Z",
+     "start_time": "2025-01-21T07:32:44.092184Z"
     }
    },
    "cell_type": "code",
@@ -109,7 +124,8 @@
     "\n",
     "# OrdinalEncoder for categorical columns\n",
     "encoder = OrdinalEncoder()\n",
-    "df_ordinal[[\"Marke_ordinal\", \"Form_ordinal\"]] = encoder.fit_transform(df[[\"Marke\", \"Form\"]])\n",
+    "df_ordinal[[\"Marke_ordinal\", \"Form_ordinal\"]] = encoder.fit_transform(df_ordinal[[\"Marke\", \"Form\"]])\n",
+    "\n",
     "\n",
     "# One-Hot Encoding for categorical columns\n",
     "df_onehot = pd.get_dummies(df_onehot, columns=[\"Marke\", \"Form\"])"
@@ -117,112 +133,26 @@
    "id": "a2ac215e1aea5ec9",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "   Preis  Marke_bmw  Marke_mitsubishi  Marke_saab  Form_cabrio  Form_kombi  \\\n",
-       "0  20000      False             False        True        False       False   \n",
-       "1  30000       True             False       False         True       False   \n",
-       "2  25000      False              True       False        False        True   \n",
-       "3  25000      False              True       False        False        True   \n",
-       "4  30000       True             False       False        False       False   \n",
-       "\n",
-       "   Form_limousine  \n",
-       "0            True  \n",
-       "1           False  \n",
-       "2           False  \n",
-       "3           False  \n",
-       "4            True  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Preis</th>\n",
-       "      <th>Marke_bmw</th>\n",
-       "      <th>Marke_mitsubishi</th>\n",
-       "      <th>Marke_saab</th>\n",
-       "      <th>Form_cabrio</th>\n",
-       "      <th>Form_kombi</th>\n",
-       "      <th>Form_limousine</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30000</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>25000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>25000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30000</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Preis  Marke_bmw  Marke_mitsubishi  Marke_saab  Form_cabrio  Form_kombi  \\\n",
+      "0  20000      False             False        True        False       False   \n",
+      "1  30000       True             False       False         True       False   \n",
+      "2  25000      False              True       False        False        True   \n",
+      "3  25000      False              True       False        False        True   \n",
+      "4  30000       True             False       False        False       False   \n",
+      "\n",
+      "   Form_limousine  \n",
+      "0            True  \n",
+      "1           False  \n",
+      "2           False  \n",
+      "3           False  \n",
+      "4            True  \n"
+     ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -344,13 +274,7 @@
    "execution_count": 20
   },
   {
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-01-20T08:29:16.000812Z",
-     "start_time": "2025-01-20T08:29:15.926509Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Setting up control group\n",
@@ -372,166 +296,35 @@
     "df_split = pd.concat([train_df, control_df]).sort_index()\n",
     "df_split"
    ],
-   "id": "initial_id",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                  5.1               3.5                1.4               0.2   \n",
-       "1                  4.9               3.0                1.4               0.2   \n",
-       "2                  4.7               3.2                1.3               0.2   \n",
-       "3                  4.6               3.1                1.5               0.2   \n",
-       "4                  5.0               3.6                1.4               0.2   \n",
-       "..                 ...               ...                ...               ...   \n",
-       "145                6.7               3.0                5.2               2.3   \n",
-       "146                6.3               2.5                5.0               1.9   \n",
-       "147                6.5               3.0                5.2               2.0   \n",
-       "148                6.2               3.4                5.4               2.3   \n",
-       "149                5.9               3.0                5.1               1.8   \n",
-       "\n",
-       "     training  \n",
-       "0           1  \n",
-       "1           1  \n",
-       "2           1  \n",
-       "3           1  \n",
-       "4           1  \n",
-       "..        ...  \n",
-       "145         0  \n",
-       "146         1  \n",
-       "147         1  \n",
-       "148         1  \n",
-       "149         1  \n",
-       "\n",
-       "[150 rows x 5 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "      <th>training</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>150 rows × 5 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+   "id": "46a6767528253c3f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-01-21T08:52:17.788690Z",
+     "start_time": "2025-01-21T08:52:17.777921Z"
     }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv(\"data.csv\", delimiter=\",\")\n",
+    "df[df[\"Diagnose\"] == \"M\"] = df[df[\"Diagnose\"] == \"M\"].replace(\"M\", 1)\n",
+    "df[df[\"Diagnose\"] == \"B\"] = df[df[\"Diagnose\"] == \"B\"].replace(\"B\", 0)\n",
+    "\n",
+    "df[df[\"Risiko\"] == \"Gering\"] = df[df[\"Risiko\"] == \"Gering\"].replace(\"Gering\", 1)\n",
+    "df[df[\"Risiko\"] == \"Mittel\"] = df[df[\"Risiko\"] == \"Mittel\"].replace(\"Mittel\", 2)\n",
+    "df[df[\"Risiko\"] == \"Hoch\"] = df[df[\"Risiko\"] == \"Hoch\"].replace(\"Hoch\", 3)\n",
+    "\n",
+    "\n",
+    "# export to csv\n",
+    "df.to_csv(\"data.csv\", index=False)"
    ],
-   "execution_count": 12
+   "id": "initial_id",
+   "outputs": [],
+   "execution_count": 27
   }
  ],
  "metadata": {
