--- a/Semester 3/DS Grundlagen/SEP DSG.ipynb
+++ b/Semester 3/DS Grundlagen/SEP DSG.ipynb
@@ -5,8 +5,8 @@
    "id": "e0ba8872a01f5b4e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T14:14:21.294633Z",
-     "start_time": "2025-01-20T14:14:21.292321Z"
+     "end_time": "2025-02-24T09:18:56.415977Z",
+     "start_time": "2025-02-24T09:18:56.095592Z"
     }
    },
    "source": [
@@ -16,7 +16,7 @@
     "from nbconvert import export\n",
     "\n",
     "# Binary to Integer\n",
-    "binary_string = \"00001101\"\n",
+    "binary_string = \"010010\"\n",
     "b = BitArray(bin=binary_string)\n",
     "print(b.int)  # Output: 13\n",
     "\n",
@@ -30,12 +30,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n",
+      "18\n",
       "00101100\n"
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 1
   },
   {
    "metadata": {
